--- a/service/.gitignore
+++ b/service/.gitignore
@@ -7,6 +7,13 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Env files (👈 新增区块)
+.env
+.env.local
+.env.development
+.env.production
+.env.*
+
 node_modules
 .DS_Store
 dist
