--- a/service/package.json
+++ b/service/package.json
@@ -11,7 +11,7 @@
     "express"
   ],
   "engines": {
-    "node": "^16 || ^18 || ^19"
+    "node": "^16 || ^18 || ^19 || ^20 || ^22"
   },
   "scripts": {
     "start": "esno ./src/index.ts",
